--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,15 @@ code {
   font-size: 26px;
   text-shadow: 2px 2px black;
 }
+
+@media only screen and (max-width: 430px) {
+  #page-title {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  #author {
+    font-size: 18px;
+  }
+}
